# find_dupes

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/: custom_types.py  file_hash.py  file_operations.py  main.py
